[tool.poetry]
name = "api-graphql"
version = "0.1.0"
description = ""
authors = ["Rafael <rafaelmoreiracvo@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ariadne = "^0.23.0"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
